@@ -1,3 +1,8 @@
+1999-04-20  Alexandre Oliva  <oliva@dcc.unicamp.br>
+
+	* libobj10.test: New file.
+	* Makefile.am (TESTS): Added libobj10.test.
+
 1999-04-11  Tom Tromey  <tromey@cygnus.com>
 
 	* subobj2.test: New file.
